--- a/04-sast/java/bearer.gitlab-ci.yml
+++ b/04-sast/java/bearer.gitlab-ci.yml
@@ -11,7 +11,6 @@ bearer:
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-    - ".DefectDojo_variables"
   script:
     - /bin/bearer scan .
       --format sarif
@@ -20,7 +19,7 @@ bearer:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
         echo "Uploading"
-        dd-wrapper --dd-report-file=reports/sast.bearer.report.json --dd-engagement-test-title="Bearer Sarif Report" --dd-engagement-scan-type="SARIF"
+        cat reports/sast.bearer.report.json
       fi
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /bearer/"
@@ -31,7 +30,3 @@ bearer:
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
   allow_failure: true
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
