--- a/02-lint/docker.file/kics.gitlab-ci.yml
+++ b/02-lint/docker.file/kics.gitlab-ci.yml
@@ -7,10 +7,8 @@ variables:
 # KICS Scanner (https://github.com/Checkmarx/kics)
 KICS Dockerfile Scanning:
   extends:
-    - ".artifacts"
     - ".lint_base"
     - ".lint_rule"
-    - ".DefectDojo_variables"
   variables:
     LINT_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/kics:latest
   script:
@@ -21,14 +19,10 @@ KICS Dockerfile Scanning:
       --report-formats json
       --path ${CI_DOCKERFILE:-Dockerfile}
       --ignore-on-exit all
-  # after_script:
-  #   - |
-  #     if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
-  #       echo "Uploading"
-  #       dd-wrapper --dd-report-file=reports/lint.kics_dockerfile.report.json --dd-engagement-test-title="KICS Dockerfile Scanner" --dd-engagement-scan-type="KICS Scan"
-  #     fi
+  after_script:
+    - |
+      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+        echo "Uploading"
+        cat reports/lint.kics_dockerfile.report.json
+      fi
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
