--- a/03-audit/docker.image.gitlab-ci.yml
+++ b/03-audit/docker.image.gitlab-ci.yml
@@ -2,10 +2,8 @@ include:
   - local: 'functions.gitlab-ci.yml'
 
 Forming CycloneDX SBOM (Docker):
-  stage: Audit (image)
   extends:
-    - ".artifacts"
-    - ".audit_base"
+    - ".audit_image_base"
     - ".audit_rule"
   variables:
     REGISTRY: $CI_REGISTRY
@@ -29,7 +27,3 @@ Forming CycloneDX SBOM (Docker):
         cat reports/cdx-sbom.syft.json
       fi
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
