--- a/03-audit/grype.gitlab-ci.yml
+++ b/03-audit/grype.gitlab-ci.yml
@@ -3,10 +3,8 @@ include:
 
 Grype SBOM:
   extends:
-    - ".artifacts"
-    - ".audit_base"
+    - ".audit_src_base"
     - ".audit_rule"
-    - ".DefectDojo_variables"
   image:
     name: registry.gitlab.com/dc20e6/devsecops/images/grype:latest
     entrypoint: [""]
@@ -18,14 +16,10 @@ Grype SBOM:
     - mkdir /tmp/config || true
     - grype db list
     - grype ./ -o json > reports/audit.grype.report.json
-  # after_script:
-  #   - |
-  #     if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-  #       echo "Uploading"
-  #       dt-wrapper --dt-sbom-path reports/audit.grype.report.json --dt-enable-project-properties
-  #     fi
+  after_script:
+    - |
+      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
+        echo "Uploading"
+        cat reports/audit.grype.report.json
+      fi
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
