--- a/03-audit/php.gitlab-ci.yml
+++ b/03-audit/php.gitlab-ci.yml
@@ -3,8 +3,7 @@ include:
 
 Forming CycloneDX SBOM:
   extends:
-    - ".artifacts"
-    - ".audit_base"
+    - ".audit_src_base"
     - ".audit_rule"
   image:
     name: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-php:latest
@@ -13,14 +12,10 @@ Forming CycloneDX SBOM:
     - composer CycloneDX:make-sbom 
       --output-format=JSON
       --output-file=reports/cdx-sbom.php.json
-  # after_script:
-  #   - |
-  #     if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-  #       echo "Uploading"
-  #       dt-wrapper --dt-sbom-path reports/cdx-sbom.php.json --dt-enable-project-properties
-  #     fi
+  after_script:
+    - |
+      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
+        echo "Uploading"
+        cat reports/cdx-sbom.php.json
+      fi
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
