--- a/03-audit/python.gitlab-ci.yml
+++ b/03-audit/python.gitlab-ci.yml
@@ -9,8 +9,7 @@ variables:
 
 Forming CycloneDX SBOM:
   extends:
-    - ".artifacts"
-    - ".audit_base"
+    - ".audit_src_base"
     - ".audit_rule"
   image:
     name: registry.gitlab.com/dc20e6/devsecops/images/cyclonedx-py:latest
@@ -18,17 +17,17 @@ Forming CycloneDX SBOM:
     - cyclonedx-py $PYTHON_DEPENDENCY_MANAGMENT
       --output-format json
       --outfile reports/cdx-sbom.py.json
-  # after_script:
-  #   - |
-  #     if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-  #       echo "Uploading"
-  #       dt-wrapper --dt-sbom-path $SBOM_PATH --dt-enable-project-properties
-  #     fi
+  after_script:
+    - |
+      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
+        echo "Uploading"
+        cat reports/cdx-sbom.py.json
+      fi
   when: manual
 
 # poetry-audit:
 #   extends:
-#     - ".audit_base"
+#     - ".audit_src_base"
 #     - ".audit_rule_mr"
 #   variables:
 #     AUDIT_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
@@ -37,7 +36,3 @@ Forming CycloneDX SBOM:
 #   script:
 #     - poetry audit --with dev
 #   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
