--- a/04-sast/docker.image/dockle.gitlab-ci.yml
+++ b/04-sast/docker.image/dockle.gitlab-ci.yml
@@ -8,7 +8,6 @@ Dockle Image Scanning:
   stage: SAST (image)
   extends:
     - ".sast_base"
-    - ".DefectDojo_variables"
   variables:
     SAST_IMAGE: harbor.example.com/devops/dockle:latest
   script:
@@ -23,7 +22,7 @@ Dockle Image Scanning:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
         echo "Uploading"
-        dd-wrapper --dd-report-file=reports/iac.dockle.report.json --dd-engagement-test-title="Dockle Image Scanning" --dd-engagement-scan-type="Dockle Scan"
+        cat reports/iac.dockle.report.json
       fi
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /Dockle Image Scanning/"
@@ -32,7 +31,3 @@ Dockle Image Scanning:
       when: never
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
