--- a/04-sast/docker.image/trivy.gitlab-ci.yml
+++ b/04-sast/docker.image/trivy.gitlab-ci.yml
@@ -9,7 +9,6 @@ Trivy Image Scanning:
   stage: SAST (image)
   extends:
     - ".sast_base"
-    - ".DefectDojo_variables"
   image:
     name: registry.gitlab.com/dc20e6/devsecops/images/trivy:latest
   script:
@@ -20,9 +19,9 @@ Trivy Image Scanning:
       --username serviceaccount,"$HARBOR_LOGIN"
       --password "$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)","$HARBOR_PASSWORD"
       $IMAGE_TO_SCAN
-  # after_script:
-  #   - echo "Uploading"
-  #   - dd-wrapper --dd-report-file=reports/iac.trivy.image.report.json --dd-engagement-test-title="Trivy Image Scan" --dd-engagement-scan-type="Trivy Scan"
+  after_script:
+    - echo "Uploading"
+    - cat reports/iac.trivy.image.report.json
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /Trivy Image Scanning/"
       when: never
@@ -30,7 +29,3 @@ Trivy Image Scanning:
       when: never
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
