--- a/04-sast/frontend/eslint.gitlab-ci.yml
+++ b/04-sast/frontend/eslint.gitlab-ci.yml
@@ -11,7 +11,6 @@ eslint (sast):
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-    - ".DefectDojo_variables"
   script:
     # - npx eslint .
     # - npm test
@@ -21,7 +20,7 @@ eslint (sast):
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
         echo "Uploading"
-        dd-wrapper --dd-report-file=reports/sast.eslint.report.json --dd-engagement-test-title="ESLint Scan" --dd-engagement-scan-type="ESLint Scan"
+        cat reports/sast.eslint.report.json
       fi
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /eslint/"
@@ -32,7 +31,3 @@ eslint (sast):
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
   allow_failure: true
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
