--- a/04-sast/go/gosec.gitlab-ci.yml
+++ b/04-sast/go/gosec.gitlab-ci.yml
@@ -12,7 +12,6 @@ Gosec:
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-    - ".DefectDojo_variables"
   script:
     - ls -la
     - gosec
@@ -21,7 +20,7 @@ Gosec:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
         echo "Uploading"
-        dd-wrapper --dd-report-file=reports/sast.gosec.report.json --dd-engagement-test-title="Gosec Scanner" --dd-engagement-scan-type="Gosec Scanner"
+        cat reports/sast.gosec.report.json
       fi
   rules:
     - if: "$SAST_EXCLUDED_ANALYZERS =~ /gosec/"
@@ -32,7 +31,3 @@ Gosec:
     - if: $CI_COMMIT_REF_NAME == $SECURITY_BRANCH
   when: manual
   allow_failure: true
-
-# DefectDojo Engagement Creation:
-#   extends:
-#     - ".DefectDojo_Engagement_Creation"
