--- a/04-sast/disabled/nodejs-scan.gitlab-ci.yml
+++ b/04-sast/disabled/nodejs-scan.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
 # -
 nodejs-scan:
   variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
