--- a/04-sast/k8s.helm/kube-linter.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kube-linter.gitlab-ci.yml
@@ -9,7 +9,7 @@ kube-linter:
   extends:
     - ".sast_base"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/kube-linter:latest 
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/kube-linter:latest 
   script:
     - kube-linter lint .
     # - kube-linter lint /path/to/your/yaml.yaml
