--- a/05-dast/k8s.cluster/prowler.gitlab-ci.yml
+++ b/05-dast/k8s.cluster/prowler.gitlab-ci.yml
@@ -6,7 +6,7 @@ prowler:
   extends:
     - ".dast_base"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/prowler:latest
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/prowler:latest
   script:
     - prowler kubernetes --help
   rules:
