--- a/03-audit/python.gitlab-ci.yml
+++ b/03-audit/python.gitlab-ci.yml
@@ -30,7 +30,7 @@ Forming CycloneDX SBOM:
 #     - ".audit_src_base"
 #     - ".audit_rule_mr"
 #   variables:
-#     AUDIT_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+#     AUDIT_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
 #   before_script:
 #     - poetry self add ko-poetry-audit-plugin
 #   script:
