--- a/04-sast/disabled/bearer.gitlab-ci.yml
+++ b/04-sast/disabled/bearer.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
 # bearer (https://github.com/Bearer/bearer)
 bearer:
   variables:
-    SAST_IMAGE: harbor.example.com/devops/bearer:latest
+    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/bearer:latest
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
