--- a/04-sast/java/cpd.gitlab-ci.yml
+++ b/04-sast/java/cpd.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
 
 cpd:
   variables:
-    SAST_IMAGE: harbor.example.com/devops/pmd:latest
+    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/pmd:latest
     SEARCH_MAX_DEPTH: 4
     CPD_LANGUAGE: java
     CPD_LANGUAGE_RULESETS: rulesets
