--- a/04-sast/k8s.helm/kubescape.gitlab-ci.yml
+++ b/04-sast/k8s.helm/kubescape.gitlab-ci.yml
@@ -9,7 +9,7 @@ Kubescape Helm Scan:
   extends:
     - ".sast_base"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/kubescape:v3.0.11
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/kubescape:v3.0.11
   script:
     - echo $CI_JOB_NAME
     - kubescape scan .
