--- a/04-sast/mobile/mobsf-adnroid.gitlab-ci.yml
+++ b/04-sast/mobile/mobsf-adnroid.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
 
 ".mobsf":
   variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
@@ -19,7 +19,7 @@ variables:
 # +
 mobsf-android:
   variables:
-    SAST_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+    SAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".mobsf"
