--- a/05-dast/k8s.cluster/kube-hunter.gitlab-ci.yml
+++ b/05-dast/k8s.cluster/kube-hunter.gitlab-ci.yml
@@ -6,7 +6,7 @@ kube-hunter:
   extends:
     - ".dast_base"
   variables:
-    IAC_IMAGE: $CI_REGISTRY/devops/kube-hunter:latest
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/kube-hunter:latest
   script:
     - echo $CI_JOB_NAME
     - kube-hunter
