--- a/05-dast/k8s.cluster/kubeaudit.gitlab-ci.yml
+++ b/05-dast/k8s.cluster/kubeaudit.gitlab-ci.yml
@@ -6,7 +6,7 @@ Kubeaudit:
   extends:
     - ".dast_base"
   variables:
-    IAC_IMAGE: $CI_REGISTRY/devops/python:3.11.6-p9
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/python:3.11.6-p9
   script:
     - echo $CI_JOB_NAME
   rules:
