--- a/05-dast/k8s.cluster/kubescape.gitlab-ci.yml
+++ b/05-dast/k8s.cluster/kubescape.gitlab-ci.yml
@@ -6,7 +6,7 @@ Kubescape Cluster Scan:
   extends:
     - ".dast_base"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/kubescape:v3.0.11
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/kubescape:v3.0.11
   script:
     - echo $CI_JOB_NAME
     - kubescape scan --kubeconfig cluster.conf
