--- a/05-dast/k8s.cluster/popeye.gitlab-ci.yml
+++ b/05-dast/k8s.cluster/popeye.gitlab-ci.yml
@@ -6,7 +6,7 @@ popeye:
   extends:
     - ".dast_base"
   variables:
-    IAC_IMAGE: harbor.example.com/devops/popeye:v0.21.3
+    IAC_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/popeye:v0.21.3
   script:
     - echo $CI_JOB_NAME
     - popeye
