--- a/05-dast/web/nikto.gitlab-ci.yml
+++ b/05-dast/web/nikto.gitlab-ci.yml
@@ -6,7 +6,7 @@ nikto:
   extends:
     - ".dast_base"
   variables:
-    DAST_IMAGE: harbor.example.com/devops/nikto:latest
+    DAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/nikto:latest
   script:
     - echo $CI_JOB_NAME
     - nikto.pl
@@ -23,7 +23,7 @@ Nikto (all):
   extends:
     - ".dast_base"
   variables:
-    DAST_IMAGE: harbor.example.com/devops/nikto:latest
+    DAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/nikto:latest
   script:
     - echo $CI_JOB_NAME
     - nikto.pl
