--- a/05-dast/web/wapiti.gitlab-ci.yml
+++ b/05-dast/web/wapiti.gitlab-ci.yml
@@ -6,7 +6,7 @@ Wapiti:
   extends:
     - ".dast_base"
   variables:
-    DAST_IMAGE: harbor.example.com/devops/wapiti:3.1.8
+    DAST_IMAGE: registry.gitlab.com/dc20e6/devsecops/images/wapiti:3.1.8
   script:
     - wapiti
       --url http://$DAST_WEBSITE
