--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -10,7 +10,7 @@ Detect-Secrets:
     name: registry.gitlab.com/dc20e6/devsecops/images/detect-secrets:latest
     entrypoint: [""]
   variables:
-    DETECT_SECRETS_IGNORE_FILE: ".detectsecretsingore"
+    DETECT_SECRETS_IGNORE_FILE: .detectsecretsingore
   script:
     - |
       if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
