--- a/helpers/build.gitlab-ci.yml
+++ b/helpers/build.gitlab-ci.yml
@@ -1,12 +1,12 @@
 ".build":
   stage: Build
   variables:
-    DOCKERFILE: "Dockerfile"
+    DOCKERFILE: Dockerfile
     REGISTRY: $CI_REGISTRY
     REGISTRY_USER: $CI_REGISTRY_USER
     REGISTRY_PASSWORD: $CI_REGISTRY_PASSWORD
     REGISTRY_PATH: $CI_PROJECT_PATH
-    TAG: "latest"
+    TAG: latest
     KANIKO_CONTEXT: >
       --context $CI_PROJECT_DIR
     KANIKO_DOCKERFILE: >
@@ -31,6 +31,11 @@
   before_script:
     - echo "{\"auths\":{\"${REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${REGISTRY_USER}" "${REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   script:
+    - echo $KANIKO_CONTEXT
+    - echo $KANIKO_DOCKERFILE
+    - echo $KANIKO_ARGS
+    - echo $KANIKO_DESTINATION
+    - echo $KANIKO_LABELS
     - /kaniko/executor
       $KANIKO_CONTEXT
       $KANIKO_DOCKERFILE
