--- a/01-secrets/detect-secrets.gitlab-ci.yml
+++ b/01-secrets/detect-secrets.gitlab-ci.yml
@@ -13,7 +13,7 @@ Detect-Secrets:
     DETECT_SECRETS_IGNORE_FILE: .detectsecretsingore
   script:
     - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+      if [ "$GENERATE_REPORT" = 'true' ]; then
         if [[ -e $DETECT_SECRETS_IGNORE_FILE ]]; then
           detect-secrets scan --word-list $DETECT_SECRETS_IGNORE_FILE . > reports/secrets.detect_secrets.report.json
         else
@@ -28,7 +28,7 @@ Detect-Secrets:
       fi
   after_script:
     - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+      if [ "$GENERATE_REPORT" = 'true' ]; then
         echo "Uploading"
         cat reports/secrets.detect_secrets.report.json
       fi
