--- a/04-sast/go/gosec.gitlab-ci.yml
+++ b/04-sast/go/gosec.gitlab-ci.yml
@@ -15,7 +15,7 @@ Gosec:
     - echo gosec > reports/sast.gosec.report.json
   after_script:
     - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+      if [ "$GENERATE_REPORT" = 'true' ]; then
         echo "Uploading"
         cat reports/sast.gosec.report.json
       fi
