--- a/03-audit/docker.image.gitlab-ci.yml
+++ b/03-audit/docker.image.gitlab-ci.yml
@@ -21,9 +21,6 @@ Forming CycloneDX SBOM (Docker):
     - syft scan $SYFT_IMAGE
       -o cyclonedx-json > reports/cdx-sbom.syft.json
   after_script:
-    - |
-      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        cat reports/cdx-sbom.syft.json
-      fi
+    - echo "Uploading"
+    - cat reports/cdx-sbom.syft.json
   when: manual
