--- a/03-audit/go.gitlab-ci.yml
+++ b/03-audit/go.gitlab-ci.yml
@@ -17,11 +17,8 @@ Forming CycloneDX SBOM (go):
       -licenses
       .
   after_script:
-    - |
-      if [ "$DT_UPLOAD_REPORT" = 'true' ]; then
-        echo "Uploading"
-        cat reports/cdx-sbom.go.json
-      fi
+    - echo "Uploading"
+    - cat reports/cdx-sbom.go.json
   artifacts:
     paths:
       - reports/
