--- a/04-sast/disabled.gitlab-ci.yml
+++ b/04-sast/disabled.gitlab-ci.yml
@@ -171,7 +171,7 @@ bearer:
       --output reports/sast.bearer.report.json
   after_script:
     - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+      if [ "$GENERATE_REPORT" = 'true' ]; then
         echo "Uploading"
         cat reports/sast.bearer.report.json
       fi
