--- a/04-sast/java/bearer.gitlab-ci.yml
+++ b/04-sast/java/bearer.gitlab-ci.yml
@@ -14,7 +14,7 @@ bearer:
       --output reports/sast.bearer.report.json
   after_script:
     - |
-      if [ "$DD_UPLOAD_REPORT" = 'true' ]; then
+      if [ "$GENERATE_REPORT" = 'true' ]; then
         echo "Uploading"
         cat reports/sast.bearer.report.json
       fi
