--- a/04-sast/node.yarn.gitlab-ci.yml
+++ b/04-sast/node.yarn.gitlab-ci.yml
@@ -1,3 +1,3 @@
 include:
   - local: '04-sast/base/semgrep.gitlab-ci.yml'
-  - local: '04-sast/frontend/eslint.gitlab-ci.yml'
+  - local: '04-sast/node.yarn/eslint.gitlab-ci.yml'
