--- a/04-sast/disabled/flawfinder.gitlab-ci.yml
+++ b/04-sast/disabled/flawfinder.gitlab-ci.yml
@@ -8,8 +8,7 @@ flawfinder:
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-  before_script:
-    - mkdir reports/ || true
+    - ".artifacts"
   script:
     - find . -type f -name "*.c"
     - find . -type f -name "*.cc"
