--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -1,11 +1,16 @@
-Forming CycloneDX SBOM:
+include:
+  - local: 'functions.gitlab-ci.yml'
+
+Forming CycloneDX SBOM (npm):
+  extends:
+    - ".audit_src_base"
+    - ".audit_rule"
+  image:
+    name: "node:22.9.0-alpine3.20"
   variables:
     PACKAGE_LOCK_ONLY: "true"
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
-    OUTPUT_FILE: "reports/cdx-sbom.npm.json"
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
-  image:
-    name: "node:22.9.0-alpine3.20"
   before_script:
     - npm install --global @cyclonedx/cyclonedx-npm
     - cyclonedx-npm --help
@@ -14,12 +19,11 @@ Forming CycloneDX SBOM:
     - cyclonedx-npm
       --package-lock-only $PACKAGE_LOCK_ONLY
       --spec-version $SPEC_VERSION
-      --output-file $OUTPUT_FILE
+      --output-file reports/cdx-sbom.npm.json
       --mc-type $MC_TYPE
-  artifacts:
-    paths:
-      - reports/cdx-sbom.npm.json
-    expire_in: 1 day
+  after_script:
+    - echo "Uploading"
+    - cat reports/cdx-sbom.npm.json
 
 # Forming CycloneDX SBOM (npm) v2:
 #   stage: Audit (src)
