--- a/03-audit/node.yarn.gitlab-ci.yml
+++ b/03-audit/node.yarn.gitlab-ci.yml
@@ -1,26 +1,30 @@
+include:
+  - local: 'functions.gitlab-ci.yml'
+
 # Requirements
 #   node >= 18
 #   yarn >= 3 (berry)
 
 Forming CycloneDX SBOM (yarn):
-  variables:
-    SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
-    OUTPUT_FILE: "reports/cdx-sbom.yarn.json"
-    MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
+  extends:
+    - ".audit_src_base"
+    - ".audit_rule"
   image:
     name: "node:22.9.0-alpine3.20"
+  variables:
+    SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
+    MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   before_script:
     - yarn dlx -q @cyclonedx/yarn-plugin-cyclonedx --help
     - mkdir reports/ || true
   script:
     - yarn dlx -q @cyclonedx/yarn-plugin-cyclonedx
       --spec-version $SPEC_VERSION
-      --output-file $OUTPUT_FILE
+      --output-file reports/cdx-sbom.yarn.json
       --mc-type $MC_TYPE
-  artifacts:
-    paths:
-      - reports/cdx-sbom.yarn.json
-    expire_in: 1 day
+  after_script:
+    - echo "Uploading"
+    - cat reports/cdx-sbom.yarn.json
 
 # Forming CycloneDX SBOM (yarn) v2:
 #   stage: Audit (src)
