--- a/04-sast/disabled/kubesec.gitlab-ci.yml
+++ b/04-sast/disabled/kubesec.gitlab-ci.yml
@@ -8,8 +8,7 @@ kubesec:
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-  before_script:
-    - mkdir reports/ || true
+    - ".artifacts"
   script:
     - echo kubesec
     - echo kubesec > reports/kubesec.json
