--- a/04-sast/disabled/phpcs-security-audit.gitlab-ci.yml
+++ b/04-sast/disabled/phpcs-security-audit.gitlab-ci.yml
@@ -8,8 +8,7 @@ phpcs-security-audit:
     SEARCH_MAX_DEPTH: 4
   extends:
     - ".sast_base"
-  before_script:
-    - mkdir reports/ || true
+    - ".artifacts"
   script:
     - find . -type f -name "*.php"
     - echo phpcs-security-audit
