--- a/03-audit/java.maven.gitlab-ci.yml
+++ b/03-audit/java.maven.gitlab-ci.yml
@@ -8,7 +8,5 @@ Forming CycloneDX SBOM:
     - cp -r settings.xml /usr/share/maven/conf/
   script:
     - mvn install cyclonedx:makeAggregateBom
-  artifacts:
-    paths:
-      - target/bom.json
-    expire_in: 1 day
+  after_script:
+    - cat target/bom.json
