--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -8,7 +8,8 @@ Forming CycloneDX SBOM (npm):
   image:
     name: "node:22.9.0-alpine3.20"
   variables:
-    PACKAGE_LOCK_ONLY: "true"
+    # PACKAGE_LOCK_ONLY: "true"
+    PACKAGE_LOCK_ONLY: "false"
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   before_script:
