--- a/03-audit/python.gitlab-ci.yml
+++ b/03-audit/python.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
   PYTHON_DEPENDENCY_MANAGMENT: "pipenv"        # Build an SBOM from Pipenv manifest
 #   PYTHON_DEPENDENCY_MANAGMENT: "poetry"        # Build an SBOM from Poetry project
 
-Forming CycloneDX SBOM:
+Forming CycloneDX SBOM (python):
   extends:
     - ".audit_src_base"
     - ".audit_rule"
