--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -16,6 +16,7 @@ Forming CycloneDX SBOM (npm):
     - npm install --global @cyclonedx/cyclonedx-npm
     - mkdir reports/ || true
   script:
+    - npm install
     - cyclonedx-npm
       --spec-version $SPEC_VERSION
       --output-file reports/cdx-sbom.npm.json
