--- a/03-audit/node.npm.gitlab-ci.yml
+++ b/03-audit/node.npm.gitlab-ci.yml
@@ -13,6 +13,7 @@ Forming CycloneDX SBOM (npm):
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   before_script:
+    - apk add --no-cache git
     - npm install --global @cyclonedx/cyclonedx-npm
     - mkdir reports/ || true
   script:
