--- a/03-audit/node.yarn.gitlab-ci.yml
+++ b/03-audit/node.yarn.gitlab-ci.yml
@@ -15,6 +15,7 @@ Forming CycloneDX SBOM (yarn):
     SPEC_VERSION: "1.4"                       # (choices: "1.2", "1.3", "1.4", "1.5", "1.6")
     MC_TYPE: "application"                    # (choices: "application", "firmware", "library")
   before_script:
+    - apk add --no-cache git
     - yarn dlx -q @cyclonedx/yarn-plugin-cyclonedx --help
     - mkdir reports/ || true
   script:
